Added task functionality. Requires date-fns.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "To Do list project of Odin Project",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/rhogoboom/todolist#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "date-fns": "^2.28.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
